--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "remorhaz/php-unilex": "0.0.8"
+    "remorhaz/php-unilex": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0 !=7.0.1",
