--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "remorhaz/php-unilex": "dev-master"
+    "remorhaz/php-unilex": "^0.0.10"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0 !=7.0.1",
@@ -26,7 +26,9 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Remorhaz\\JSON\\Parser\\Test\\": "tests/"
+      "Remorhaz\\JSON\\Parser\\Test\\": "tests/",
+      "Remorhaz\\JSON\\Parser\\Example\\": "examples/src",
+      "Remorhaz\\JSON\\Parser\\Example\\Test\\": "examples/tests"
     }
   }
 }
